# OpenDeck

./: .clang-format  .clang-tidy  .clang-tidy-compile-commands-clean  .clang-tidy-ignore  .codechecker.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Analog.cpp  Board.cpp  BoardDefsOpenDeck.h  CMakeLists.txt  EEPROM.cpp  EEPROM.h  MIDI.h  Makefile  OpenDeck.code-workspace  OpenDeck.cpp  OpenDeck.h  OpenDeck.ino  OpenDeck.sch  README.md  SysEx.cpp  SysEx.h  agents.md  docker-compose-build.yml  docker-compose.yml  doxyfile  index.html  main.cpp  targets.json  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.common  Kconfig.sysbuild  README.md  app.cmake  app.conf  common.conf  debug.conf  global.conf  nrf54h20.conf  opendeck.cmake  opendeck.conf  pico.conf  presets.yml  release.conf  sysbuild.cmake  sysbuild.conf
app/boards/: README.md
app/boards/nrf52840dk/: nrf52840dk.overlay  opendeck-nrf52840dk.overlay
app/boards/nrf54h20dk/: nrf54h20dk.overlay  opendeck-nrf54h20dk.overlay
app/boards/opendeck/arduino_nano_33_ble/: bootloader.overlay  common.overlay  firmware.overlay  opendeck.overlay
app/boards/opendeck/bergamot/: bootloader.overlay  common.overlay  firmware.overlay  opendeck.overlay
app/boards/opendeck/blackpill411/: bootloader.overlay  common.overlay  firmware.overlay  opendeck.overlay
app/boards/opendeck/discovery/: bootloader.overlay  common.overlay  firmware.overlay  opendeck.overlay
app/boards/opendeck/discovery_f407g/: bootloader.overlay  firmware.overlay
app/boards/opendeck/dubfocus16t/: bootloader.overlay  firmware.conf  firmware.overlay  opendeck.overlay
app/boards/opendeck/grand_central_m4/: bootloader.overlay  common.overlay  firmware.overlay  opendeck.overlay
app/boards/opendeck/lilygo_t_eth_elite/: common.overlay  firmware.overlay
app/boards/opendeck/metro_esp32s3/: bootloader.overlay  common.overlay  firmware.overlay
app/boards/opendeck/metro_esp32s3_w5500/: bootloader.overlay  common.overlay  firmware.overlay
app/boards/opendeck/metro_esp32s3_w6100/: common.overlay  firmware.overlay  network.conf
app/boards/opendeck/metro_rp2040/: common.overlay  firmware.overlay
app/boards/opendeck/metro_rp2040_w5500/: common.overlay  firmware.overlay
app/boards/rpi_pico/: opendeck-rpi_pico.overlay  rpi_pico.overlay
app/boards/stm32f4_disco/: opendeck-stm32f4_disco.overlay  stm32f4_disco.overlay
app/bootloader/: CMakeLists.txt  Kconfig  README.md  bootloader.conf  common.conf  debug.conf  firmware_loader.overlay  release.conf  usb.conf
app/bootloader/src/: main.cpp  threads.h
app/common/: network.conf  usb.conf
app/common/retained/: common.h  retained.h
app/common/src/: atomic_compat.cpp  threads.h
app/common/staged_update/: common.h
app/dts/bindings/: vendor-prefixes.txt
app/firmware/: CMakeLists.txt  Kconfig  ble.conf  common.conf  debug.conf  firmware.conf  release.conf  usb.conf
app/firmware/src/: Kconfig  atomic_compat.cpp  main.cpp  threads.h
app/logging/: Kconfig
app/src/: Kconfig  atomic_compat.cpp  opendeck.cpp
app/sysbuild/: mcuboot.conf  mcuboot.overlay
src/firmware/: CMakeLists.txt  Makefile  OpenDeck.cpp  OpenDeck.elf  OpenDeck.h  OpenDeck.hex  Version.h
src/firmware/OpenDeck_MCU/: OpenDeck.cpp  OpenDeck_MCU.cppproj  Types.h
src/firmware/application/: CMakeLists.txt  Makefile  main.cpp
src/firmware/board/: Board.h  CMakeLists.txt  Makefile
src/firmware/bootloader/: CMakeLists.txt  Makefile  main.cpp
src/firmware/database/: Database.cpp  Database.h  Layout.cpp
src/firmware/interface/: Interface.h
src/firmware/sysExConf/: CustomStrings.h  Handling.cpp  Init.cpp  Layout.cpp  Layout.h  SysExConf.h
src/firmware/usb-link/: CMakeLists.txt  main.cpp
src/tools/flashgen/: CMakeLists.txt  Makefile  main.cpp
src/tools/sysexgen/: CMakeLists.txt  Makefile  main.cpp
tests/: CMakeLists.txt  Defines.mk  Makefile  Setup.mk  Sources.mk  global.conf  targets.txt
tests/framework/: Framework.cpp
tests/helpers/: MIDI.h  Misc.h  Serial.h
tests/include/tests/: Common.h  common.h
tests/src/: CMakeLists.txt  README.md  main.cpp  test_Potentiometer.cpp
tests/src/bootloader/: CMakeLists.txt  Makefile  bootloader_test.cpp  prj.conf  test.cpp  testcase.yaml
tests/src/bootloader_websockets/: CMakeLists.txt  bootloader_websockets_test.cpp  testcase.yaml
tests/src/database/: CMakeLists.txt  Makefile  database_test.cpp  prj.conf  test.cpp  testcase.yaml
tests/src/dfu_stream/: CMakeLists.txt  dfu_stream_test.cpp  testcase.yaml
tests/src/hardware/: CMakeLists.txt  hardware_test.cpp  testcase.yaml
tests/src/hw/: CMakeLists.txt  Makefile  README.md  boards.txt  hw_test.cpp  test.cpp  testcase.yaml
tests/src/io/: CMakeLists.txt
tests/src/leds/: CMakeLists.txt  testcase.yaml
tests/src/midi/: CMakeLists.txt  prj.conf  testcase.yaml
tests/src/odmidi/: Makefile  test.cpp
tests/src/protocol/: CMakeLists.txt
tests/src/ringbuffer/: test.cpp
tests/src/staged_update/: CMakeLists.txt  prj.conf  staged_update_test.cpp  testcase.yaml
tests/src/staged_update_reader/: CMakeLists.txt  staged_update_reader_test.cpp  testcase.yaml
tests/src/staged_update_writer/: CMakeLists.txt  staged_update_writer_test.cpp  testcase.yaml
tests/src/system/: CMakeLists.txt  Kconfig  Makefile  prj.conf  system_test.cpp  test.cpp  testcase.yaml
tests/src/test_buttons/: Sources.mk  test.cpp
tests/src/test_database/: Sources.mk  test.cpp
tests/src/test_encoders/: Sources.mk  test.cpp
tests/src/test_odmidi/: Sources.mk  test.cpp
tests/src/test_potentiometer/: Sources.mk
tests/src/usb_over_serial/: CMakeLists.txt  Makefile  test.cpp
tests/stubs/: Analog.h  AnalogFilter.h  Board.cpp  Buttons.h  ButtonsFilter.h  Core.cpp  Database.h  Encoders.h  EncodersFilter.h  HWAAnalog.h  HWAButtons.h  HWADMX.h  HWADisplay.h  HWAEncoders.h  HWAI2C.h  HWALEDs.h  HWAMIDI.h  HWASystem.h  HWATouchscreen.h  HWAU8X8.h  LEDs.h  Listener.h  MIDI.h  MIDIHelper.h  System.h
tests/stubs/database/: DB_ReadWrite.cpp  DB_ReadWrite.h
tests/unity/: Framework.cpp  Framework.h  Helpers.h  unity_config.h
(+6191 files in other folders)
